syntax = "proto3";
package auth;
option go_package = "user-service_gc2p3/pb";

message LoginUserRequest {
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  bool success = 1;
  string message = 2;
  string user_id = 3;
}

message RegisterUserRequest {
  string username = 1;
  string password = 2;
}

message RegisterUserResponse {
  string message = 1;
  string user_id = 2;
}

message GetUserByIdRequest {
  string user_id = 1;
}

message GetUserByIdResponse {
  string username = 1;
}


service AuthUserService {
  rpc Login(LoginUserRequest) returns (LoginUserResponse);
  rpc Register(RegisterUserRequest) returns (RegisterUserResponse);
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
}

